--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,12 @@
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-  <div class="wrap">
+  <!-- <div class="wrap">
     <div class="loading">
       <div class="bounceball"></div>
       <div class="text">NOW LOADING</div>
     </div>
-  </div>
+  </div> -->
   <app-root></app-root>
 
 
